alignments fix

--- a/frontend/src/components/Front-Page/css/Testmonial.module.css
+++ b/frontend/src/components/Front-Page/css/Testmonial.module.css
@@ -28,7 +28,7 @@
 .card {
   width: 320px;
   flex-shrink: 0;
-  background: #dcdcdc;
+  background: #fdfdfd;
   margin: 0 1rem;
   padding: 2rem 1.5rem;
   border-radius: 15px;
